# March-7

./: .dockerignore  .env.example  .gitignore  ACCURACY_IMPROVEMENTS.md  CONTRIBUTING.md  LICENSE  NEW_FEATURES.md  QUICK_START_IMPROVEMENTS.md  RAG_FLOW_DIAGRAM.md  README.md  STREAMLIT_USAGE.md  SYSTEM_DESIGN_DOCUMENTATION.md  app.py  config.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  streamlit.conf
.github/workflows/: keep_alive.yml
.kiro/specs/co2-reduction-ai-agent/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
chroma_db_test/: chroma.sqlite3
components/: agent.py  data_validator.py  dataset_analyzer.py  embeddings.py  feedback_collector.py  financial_calculator.py  knowledge_loader.py  llm_client.py  prompt_templates.py  query_processor.py  recommendation_ranker.py  reference_data.py  vector_store.py
data/: environmental_sustainability_tips.txt  reference_activities.csv  sample_emissions.csv  sustainability_tips.txt
deploy/: Dockerfile
docs/: USER_GUIDE.md
models/: data_models.py
scripts/: README.md  init_vector_store.py  update_reference_data.py  verify_setup.py
src/march7/: __init__.py  app.py  config.py
src/march7/components/: agent.py  context_manager.py  data_validator.py  dataset_analyzer.py  embeddings.py  emission_calculator.py  environmental_scorer.py  example_queries.txt  financial_calculator.py  knowledge_loader.py  llm_client.py  prompt_templates.py  query_processor.py  receipt_scanner.py  recommendation_generator.py  reference_data.py  response_parser.py  response_validator.py  vector_store.py
src/march7/utils/: error_handler.py  (+1 more)
tests/: test_recommendations.py
utils/: logger.py
